syntax = "proto3";

package datasource;
option go_package = "github.com/ca-risken/datasource-api/proto/datasource";

import "google/protobuf/empty.proto";

service DataSourceService {
  rpc CleanDataSource(google.protobuf.Empty) returns (google.protobuf.Empty);
}
